Kissing booth demo and beginning of heat.js standalone library.

--- a/index.html
+++ b/index.html
@@ -1,17 +1,44 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css"
+        integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA" crossorigin="anonymous">
+
+    <style>
+        body,
+        html {
+            background: #4b3c75;
+            height: 100%;
+        }
+    </style>
+
     <title>Heat</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
 
-    Hello.
+    <div class="container h-100">
+        <div class="row h-100 justify-content-center align-items-center">
+            <form id="main" class="jumbotron  col-12">
+                <h1>Heat</h1>
 
+                <a class="btn btn-lg btn-primary" href="/kissingbooth/">Kissing Booth</a>
+            </form>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js"
+        integrity="sha384-7aThvCh9TypR7fIc2HV4O/nFMVCBwyIUKL8XCtKE+8xgCgl/PQGuFsvShjr74PBp"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
