Work on a not very good piano.

--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@
 
     <div class="container h-100">
         <div class="row h-100 justify-content-center align-items-center">
-            <form id="main" class="jumbotron  col-12">
+            <div id="main" class="jumbotron  col-12">
                 <h1>Heat</h1>
 
                 <a class="btn btn-lg btn-primary" href="/kissingbooth/">Kissing Booth</a>
-            </form>
+                <a class="btn btn-lg btn-primary" href="/piano/">Piano</a>
+
+            </div>
+
         </div>
     </div>
 
