--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <style>
         body,
         html {
-            background: #4b3c75;
+            background: #2b3990;
+            background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
             height: 100%;
         }
     </style>
@@ -25,11 +26,24 @@
 
     <div class="container h-100">
         <div class="row h-100 justify-content-center align-items-center">
-            <div id="main" class="jumbotron  col-12">
-                <h1>Heat</h1>
 
-                <a class="btn btn-lg btn-primary" href="/kissingbooth/">Kissing Booth</a>
-                <a class="btn btn-lg btn-primary" href="/piano/">Piano</a>
+            <div id="main">
+
+                <div class="row mb-4">
+                    <div class="col-12">
+                        <img src="images/heat.svg" width="360" height="128">
+                    </div>
+                </div>
+
+                <div class="row justify-content-center align-items-center">
+                    <div class="btn-group" role="group" aria-label="Basic example">
+                        <a class="btn btn-outline-light" href="/orbs/">Orbs</a>
+                        <a class="btn btn-outline-light" href="/kissingbooth/">Kissing Booth</a>
+                        <a class="btn btn-outline-light" href="/sequence/">Sequence</a>
+                        <a class="btn btn-outline-light" href="/piano/">Piano</a>
+                        <a class="btn btn-outline-light" href="/about/">About</a>
+                    </div>
+                </div>
 
             </div>
 
