Styling and cleanup, new about and help pages.

--- a/about/index.html
+++ b/about/index.html
@@ -26,7 +26,6 @@
             opacity: .5;
             text-transform: uppercase;
             font-size: .8em;
-            r
         }
 
         .btn-link:hover {
@@ -42,12 +41,11 @@
 
 <body>
 
-
     <div class="container h-100">
 
         <div class="row h-100 justify-content-center align-items-center">
 
-            <div class="col-8">
+            <div class="col-6">
 
                 <div class="row mb-4">
                     <div class="col text-center">
@@ -55,12 +53,16 @@
                     </div>
                 </div>
 
-                <div class="row justify-content-center align-items-center text-center">
-                    <div class="btn-group" role="group" aria-label="Basic example">
-                        <a class="btn btn-outline-light" href="/orbs/">Orbs</a>
-                        <a class="btn btn-outline-light" href="/kissingbooth/">Kissing Booth</a>
-                        <a class="btn btn-outline-light" href="/sequence/">Sequence</a>
-                        <a class="btn btn-outline-light" href="/piano/">Piano</a>
+                <div class="row justify-content-center align-items-center">
+                    <div class="col card">
+
+                        <div class="card-body">
+                            <p class="card-text">
+                                Heat is a Twitch Extension that allows for user engagement
+                                through clicking directly on
+                                the video.</p>
+                        </div>
+
                     </div>
                 </div>
 
