--- a/help/index.html
+++ b/help/index.html
@@ -42,12 +42,11 @@
 
 <body>
 
-
     <div class="container h-100">
 
         <div class="row h-100 justify-content-center align-items-center">
 
-            <div class="col-8">
+            <div class="col-6">
 
                 <div class="row mb-4">
                     <div class="col text-center">
@@ -55,12 +54,16 @@
                     </div>
                 </div>
 
-                <div class="row justify-content-center align-items-center text-center">
-                    <div class="btn-group" role="group" aria-label="Basic example">
-                        <a class="btn btn-outline-light" href="/orbs/">Orbs</a>
-                        <a class="btn btn-outline-light" href="/kissingbooth/">Kissing Booth</a>
-                        <a class="btn btn-outline-light" href="/sequence/">Sequence</a>
-                        <a class="btn btn-outline-light" href="/piano/">Piano</a>
+                <div class="row justify-content-center align-items-center">
+                    <div class="col card">
+
+                        <div class="card-body">
+                            <p class="card-text">
+                                Please visit the wiki for information on using Heat and creating your own custom
+                                experiences.</p>
+                            <a href="https://github.com/scottgarner/Heat/wiki" class="card-link">&raquo; Heat Wiki</a>
+                        </div>
+
                     </div>
                 </div>
 
