--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                         <a class="btn btn-outline-light" href="/kissingbooth/">Kissing Booth</a>
                         <a class="btn btn-outline-light" href="/sequence/">Sequence</a>
                         <a class="btn btn-outline-light" href="/piano/">Piano</a>
+                        <a class="btn btn-outline-light" href="/heatmap/">Heat Map</a>
                     </div>
                 </div>
 
