--- a/kissingbooth/index.html
+++ b/kissingbooth/index.html
@@ -10,6 +10,9 @@
             right: 0;
             bottom: 0;
             user-select: none;
+
+            background: url('textures/background.svg') no-repeat center bottom fixed;
+            background-size: cover;
         }
     </style>
 </head>
