--- a/heatmap/index.html
+++ b/heatmap/index.html
@@ -6,6 +6,14 @@
     <meta charset="UTF-8">
 
     <style>
+        body,
+        html {
+            background: #2b3990;
+            background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
+            height: 100%;
+            overflow: hidden;
+        }
+
         #main {
             position: fixed;
             top: 0;
@@ -218,7 +226,6 @@
                         let scale = (1 - age)
                         child.scale.set(scale);
                     }
-
 
                 };
 
