--- a/index.html
+++ b/index.html
@@ -57,11 +57,12 @@
                 <div class="row justify-content-center align-items-center text-center">
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <a class="btn btn-outline-light" href="/heatmap/">Heat</a>
-                        <a class="btn btn-outline-light" href="/orbs/">Orbs</a>
+                        <!-- <a class="btn btn-outline-light" href="/orbs/">Orbs</a> -->
                         <a class="btn btn-outline-light" href="/kissingbooth/">Kiss</a>
                         <a class="btn btn-outline-light" href="/sequence/">Sequence</a>
-                        <a class="btn btn-outline-light" href="/piano/">Piano</a>
+                        <!-- <a class="btn btn-outline-light" href="/piano/">Piano</a> -->
                         <a class="btn btn-outline-light" href="/baby/">Baby</a>
+                        <a class="btn btn-outline-light" href="/warp/">Warp</a>
                     </div>
                 </div>
 
