--- a/baby/index.html
+++ b/baby/index.html
@@ -3,6 +3,14 @@
 <head>
     <title>Baby</title>
     <style>
+        body,
+        html {
+            background: #2b3990;
+            background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
+            height: 100%;
+            overflow: hidden;
+        }
+
         #main {
             position: fixed;
             top: 0;
@@ -154,6 +162,7 @@
         let mousePoint = new PIXI.Point(0, 0);
 
         function updateBaby(delta) {
+
 
             if (points.length == 0) return;
 
