--- a/kissingbooth/index.html
+++ b/kissingbooth/index.html
@@ -3,6 +3,14 @@
 <head>
     <title>Kissing Booth</title>
     <style>
+        body,
+        html {
+            background: #2b3990;
+            background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
+            height: 100%;
+            overflow: hidden;
+        }
+
         #main {
             position: fixed;
             top: 0;
