New copy for help and about pages.

--- a/help/index.html
+++ b/help/index.html
@@ -17,6 +17,15 @@
             height: 100%;
         }
 
+        h1 {
+            font-size: 1.2em;
+        }
+
+        h2 {
+            font-size: 1em;
+            color: #666;
+        }
+
         footer {
             color: white;
         }
@@ -57,10 +66,39 @@
                     <div class="col card">
 
                         <div class="card-body">
-                            <p class="card-text">
-                                Please visit the wiki for information on using Heat and creating your own custom
+                            <h1>Broadcaster Help</h1>
+                            <hr />
+
+                            <h2>Overview</h2>
+
+                            <p>Heat works by routing user clicks on the Twitch video player to the broadcaster as raw
+                                coordinate data. This data can be used with preexisting demos or to create new
                                 experiences.</p>
-                            <a href="https://github.com/scottgarner/Heat/wiki" class="card-link">&raquo; Heat Wiki</a>
+
+                            <p><a href="https://github.com/scottgarner/Heat/wiki/Overview" class="card-link">&raquo;
+                                    Learn More about Heat</a></p>
+
+                            <hr />
+
+                            <h2>Using the Demos</h2>
+
+                            <p>After enabling Heat for your channel, follow the "Browse Overlays" link. This will
+                                automatically append your channel's id to the URL, allowing Heat to receive your click
+                                data.</p>
+
+                            <p><a href="https://github.com/scottgarner/Heat/wiki/Using-Demos" class="card-link">&raquo;
+                                    Learn More about Using the Demos</a></p>
+
+                            <hr />
+
+                            <h2>Creating Custom Experiences</h2>
+
+                            <p>Please visit the Heat wiki for information on creating your own custom
+                                viewing experiences.</p>
+
+                            <p><a href="https://github.com/scottgarner/Heat/wiki/Custom-Experiences"
+                                    class="card-link">&raquo;
+                                    Learn More about Creating Custom Experiences</a></p>
                         </div>
 
                     </div>
