--- a/about/index.html
+++ b/about/index.html
@@ -58,9 +58,9 @@
 
                         <div class="card-body">
                             <p class="card-text">
-                                Heat is a Twitch Extension that allows for user engagement
-                                through clicking directly on
-                                the video.</p>
+                                Heat is a Twitch Extension that allows for user engagement through clicking directly on
+                                the video. It was created by <a href="https://www.scottmadethis.net/">Scott Garner</a>
+                                for the Twitch AWS Extensions Challenge. </p>
                         </div>
 
                     </div>
