Updates to terms page.

--- a/terms/index.html
+++ b/terms/index.html
@@ -63,9 +63,10 @@
 
                         <div class="card-body">
                             <h2>Terms</h2>
-                            <p>There is no warranty. Don't be a jerk.</p>
+                            <p>This is an art project, there are no warranties or guarantees.</p>
                             <h2>Privacy Policy</h2>
-                            <p>I don't store your data. I don't even want it.</p>
+                            <p>Heat sends anonymous click data from the viewer to the broadcaster. No other information
+                                about the viewer is transmitted or stored.</p>
                         </div>
 
                     </div>
