--- a/hello/index.html
+++ b/hello/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Heat Hello World</title>
+    <title>Hello World</title>
 </head>
 
 <body>
@@ -30,12 +30,6 @@
             // Finally, use the click coordinates to create your experience.
             console.log(clickData);
         });
-
-        {
-            id: "U97032862",    // Opaque User ID for viewer.
-                x: "0.354",         // Normalized X coordinate.
-                    y: "0.736"          // Normalized Y coordinate.
-        }
 
     </script>
 
