Updates and clean-up in all demos.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
                         <!-- <a class="btn btn-outline-light" href="/orbs/">Orbs</a> -->
                         <a class="btn btn-outline-light" href="/kissingbooth/">Kiss</a>
                         <a class="btn btn-outline-light" href="/sequence/">Sequence</a>
-                        <!-- <a class="btn btn-outline-light" href="/piano/">Piano</a> -->
                         <a class="btn btn-outline-light" href="/baby/">Baby</a>
                         <a class="btn btn-outline-light" href="/warp/">Warp</a>
+                        <a class="btn btn-outline-light" href="/pixel/">Pixel</a>
+
                     </div>
                 </div>
 
