--- a/baby/index.html
+++ b/baby/index.html
@@ -1,13 +1,22 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
     <title>Baby</title>
+
     <style>
         body,
         html {
+            height: 100%;
+        }
+
+        body {
             background: #2b3990;
             background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
-            height: 100%;
             overflow: hidden;
         }
 
@@ -20,42 +29,42 @@
             user-select: none;
         }
     </style>
+
 </head>
 
 <body>
 
     <div id="main"></div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.0.0-rc/pixi.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.0.0-rc/pixi.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
 
     <script src="/js/heat.js"></script>
 
     <script>
 
-        // Local clicks for testing.
-
-        $(document).click(function (event) {
-
-            const normalizedX = (event.clientX * 1.0 / $(document).width()).toPrecision(3);
-            const normalizedY = (event.clientY * 1.0 / $(document).height()).toPrecision(3);
-
-            drawClick(normalizedX, normalizedY);
-
-        });
-
-        heat.addEventListener('click', (e) => {
-            drawClick(e.detail.x, e.detail.y);
-        });
-
-        //
-
-        let app;
-        let sprites, rope;
-        let points = [];
-
         (function () {
+
+            let app;
+            let sprites, rope;
+            let points = [];
+
+            // Event handling.
+
+            document.addEventListener("click", function (event) {
+
+                const normalizedX = (event.clientX * 1.0 / window.innerWidth).toPrecision(3);
+                const normalizedY = (event.clientY * 1.0 / window.innerHeight).toPrecision(3);
+
+                drawClick(normalizedX, normalizedY);
+
+            });
+
+            heat.addEventListener('click', (e) => {
+                drawClick(e.detail.x, e.detail.y);
+            });
+
+            // DOM elements.
 
             mainDiv = document.getElementById('main');
 
@@ -70,7 +79,7 @@
                 resolution: devicePixelRatio,
                 transparent: true
             });
-            document.getElementById('main').appendChild(app.view);
+            mainDiv.appendChild(app.view);
 
             sprites = new PIXI.ParticleContainer(10000, {
                 scale: true,
@@ -78,10 +87,10 @@
                 rotation: true,
                 uvs: true
             });
-            // /sprites.blendMode = PIXI.BLEND_MODES.SCREEN;
+
             app.stage.addChild(sprites);
 
-            //
+            // Create baby.
 
             let width = window.innerWidth;
             let height = window.innerHeight;
@@ -92,179 +101,154 @@
             };
             rope = new PIXI.SimpleRope(PIXI.Texture.from("sprites/baby.png"), points);
             app.stage.addChild(rope);
-        })();
 
-        var mySpriteSheetImage = PIXI.BaseTexture.from("sprites/food.png");
+            // Prepare food.
 
-        let foods = [
-            new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(0, 0, 128, 128)),
-            new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(128, 0, 128, 128)),
-            new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(0, 128, 128, 128)),
-            new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(128, 128, 128, 128))
-        ];
+            var mySpriteSheetImage = PIXI.BaseTexture.from("sprites/food.png");
 
-        //
+            let foods = [
+                new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(0, 0, 128, 128)),
+                new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(128, 0, 128, 128)),
+                new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(0, 128, 128, 128)),
+                new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(128, 128, 128, 128))
+            ];
 
-        function clearSprites() {
+            // Draw clicks.
 
-            for (let i = sprites.children.length - 1; i >= 0; i--) {
-                let child = sprites.getChildAt(i);
-                child.destroy();
-            }
+            function drawClick(clickX, clickY) {
 
-        }
+                const screenX = parseInt(clickX * mainDiv.clientWidth);
+                const screenY = parseInt(clickY * mainDiv.clientHeight);
 
-        function drawClick(clickX, clickY) {
+                const foodIndex = Math.floor(Math.random() * foods.length);
+                const food = PIXI.Sprite.from(foods[foodIndex]);
 
-            const screenX = parseInt(clickX * mainDiv.clientWidth);
-            const screenY = parseInt(clickY * mainDiv.clientHeight);
+                food.anchor.set(0.5);
+                food.x = screenX;
+                food.y = screenY;
+                food.rotation = (Math.random() * (Math.PI / 2.0)) - (Math.PI / 4.0);
 
-            const foodIndex = Math.floor(Math.random() * foods.length);
-            const food = PIXI.Sprite.from(foods[foodIndex]);
+                food.birth = Date.now();
+                food.death = food.birth + 1000;
 
-            food.anchor.set(0.5);
-            food.x = screenX;
-            food.y = screenY;
-            food.rotation = (Math.random() * (Math.PI / 2.0)) - (Math.PI / 4.0);
-
-            food.birth = Date.now();
-            food.death = food.birth + 1000;
-
-            sprites.addChild(food);
-
-            //
-
-            mousePoint = new PIXI.Point(screenX, screenY);
-
-        }
-
-        //
-
-        let clock = 0;
-
-        app.ticker.add(function (delta) {
-
-
-            updateBaby(delta);
-
-            //
-
-            for (let i = sprites.children.length - 1; i >= 0; i--) {
-                let food = sprites.getChildAt(i);
-
-            };
-
-            clock += delta;
-        });
-
-        //
-
-        let mousePoint = new PIXI.Point(0, 0);
-
-        function updateBaby(delta) {
-
-
-            if (points.length == 0) return;
-
-            //
-
-            let targetSprite;
-            let minLength = Infinity;
-
-            for (let i = 0; i < sprites.children.length; i++) {
-
-                let child = sprites.getChildAt(i);
-
-                let offset = new PIXI.Point(
-                    (points[0].x - child.x),
-                    (points[0].y - child.y)
-                );
-
-                let length = Math.sqrt(offset.x * offset.x + offset.y * offset.y);
-
-                if (length < minLength) {
-                    minLength = length;
-                    targetSprite = child;
-                }
+                sprites.addChild(food);
 
             }
 
-            if (!targetSprite) return;
+            // Animation loop.
 
-            //
+            let clock = 0;
 
-            let targetPoint = new PIXI.Point(targetSprite.x, targetSprite.y);
+            app.ticker.add(function (delta) {
 
-            let offset = new PIXI.Point(
-                (targetPoint.x - points[0].x),
-                (targetPoint.y - points[0].y)
-            );
 
-            let length = Math.sqrt(offset.x * offset.x + offset.y * offset.y);
-
-            // Normalize
-
-            offset.x /= length;
-            offset.y /= length;
-
-            if (length > 100) length = 100;
-
-            // Scale offset.
-
-            offset.x *= .05 * delta * length;
-            offset.y *= .05 * delta * length;
-
-            points[0].set(points[0].x + offset.x, points[0].y + offset.y)
-
-            // Check for food.
-
-            let foodOffset = new PIXI.Point(
-                (targetPoint.x - points[0].x),
-                (targetPoint.y - points[0].y)
-            );
-            let foodLength = Math.sqrt(foodOffset.x * foodOffset.x + foodOffset.y * foodOffset.y);
-
-            if (foodLength < 10) {
-                targetSprite.destroy();
-            }
-
-            //
-
-            targetPoint = points[0];
-
-            for (let i = 1; i < points.length; i++) {
-
-                let currentPoint = points[i];
-
-                let offset = new PIXI.Point(
-                    (targetPoint.x - currentPoint.x),
-                    (targetPoint.y - currentPoint.y)
-                );
+                updateBaby(delta);
 
                 //
 
+                for (let i = sprites.children.length - 1; i >= 0; i--) {
+                    let food = sprites.getChildAt(i);
+
+                };
+
+                clock += delta;
+            });
+
+            // Update baby.
+
+            function updateBaby(delta) {
+
+
+                if (points.length == 0) return;
+
+                // Find and eat food.
+
+                let targetSprite;
+                let minLength = Infinity;
+
+                for (let i = sprites.children.length - 1; i >= 0; i--) {
+
+                    let child = sprites.getChildAt(i);
+
+                    let offset = new PIXI.Point(
+                        (points[0].x - child.x),
+                        (points[0].y - child.y)
+                    );
+
+                    let length = Math.sqrt(offset.x * offset.x + offset.y * offset.y);
+
+                    if (length < 10) {
+                        child.destroy();
+                    } else if (length < minLength) {
+                        minLength = length;
+                        targetSprite = child;
+                    }
+
+                }
+
+                if (!targetSprite) return;
+
+                // Find offset to food and animate.
+
+                let targetPoint = new PIXI.Point(targetSprite.x, targetSprite.y);
+
+                let offset = new PIXI.Point(
+                    (targetPoint.x - points[0].x),
+                    (targetPoint.y - points[0].y)
+                );
+
                 let length = Math.sqrt(offset.x * offset.x + offset.y * offset.y);
 
-                // Normalize
+                // Normalize offset.
 
                 offset.x /= length;
                 offset.y /= length;
 
+                if (length > 100) length = 100;
+
                 // Scale offset.
 
-                offset.x *= 512 / points.length;
-                offset.y *= 512 / points.length;
+                offset.x *= .05 * delta * length;
+                offset.y *= .05 * delta * length;
 
-                points[i].set(targetPoint.x - offset.x, targetPoint.y - offset.y)
+                points[0].set(points[0].x + offset.x, points[0].y + offset.y)
 
-                targetPoint = points[i];
+                // Animate additional points.
+
+                targetPoint = points[0];
+
+                for (let i = 1; i < points.length; i++) {
+
+                    let currentPoint = points[i];
+
+                    let offset = new PIXI.Point(
+                        (targetPoint.x - currentPoint.x),
+                        (targetPoint.y - currentPoint.y)
+                    );
+
+                    //
+
+                    let length = Math.sqrt(offset.x * offset.x + offset.y * offset.y);
+
+                    // Normalize
+
+                    offset.x /= length;
+                    offset.y /= length;
+
+                    // Scale offset.
+
+                    offset.x *= 512 / points.length;
+                    offset.y *= 512 / points.length;
+
+                    points[i].set(targetPoint.x - offset.x, targetPoint.y - offset.y)
+
+                    targetPoint = points[i];
+
+                }
 
             }
 
-
-
-
-        }
+        })();
 
     </script>
 
