--- a/demo/index.html
+++ b/demo/index.html
@@ -12,9 +12,13 @@
     <style>
         body,
         html {
+            height: 100%;
+        }
+
+        body {
             background: #2b3990;
             background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
-            height: 100%;
+            overflow: hidden;
         }
 
         footer {
