--- a/heatmap/index.html
+++ b/heatmap/index.html
@@ -1,16 +1,22 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <title>Heat Map</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <title>Heatmap</title>
 
     <style>
         body,
         html {
+            height: 100%;
+        }
+
+        body {
             background: #2b3990;
             background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
-            height: 100%;
             overflow: hidden;
         }
 
@@ -31,17 +37,9 @@
 
 <body>
 
-
-    <video id="webcam" autoplay></video>
     <div id="main"></div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.0.0-rc/pixi.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
-
-    <script src="/js/heat.js"></script>
-
-    <script id="fragment" type="shader">
+    <script id="fragment" type="text/plain">
 
         precision mediump float;
 
@@ -50,7 +48,6 @@
         uniform sampler2D uSampler;
         uniform sampler2D gradient;
 
-        uniform vec2 mouse;
         uniform float time;        
 
         void main(void) {
@@ -65,38 +62,43 @@
             gl_FragColor = videoColor;
 
         }
-    
+        
     </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.0.0-rc/pixi.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
+
+    <script src="/js/heat.js"></script>
 
     <script>
 
-        let app, sprites;
-
         (function () {
 
-            //
+            let app, sprites;
 
-            let mousePosition = { x: 0, y: 0 };
+            // Event handlers.
 
-            $(document).click(function (event) {
-                const normalizedX = (event.clientX * 1.0 / $(document).width()).toPrecision(3);
-                const normalizedY = (event.clientY * 1.0 / $(document).height()).toPrecision(3);
+            document.addEventListener("click", function (event) {
+
+                const normalizedX = (event.clientX * 1.0 / window.innerWidth).toPrecision(3);
+                const normalizedY = (event.clientY * 1.0 / window.innerHeight).toPrecision(3);
 
                 drawClick(normalizedX, normalizedY);
-            });
 
-            $(document).mousemove(function (event) {
-                mousePosition = {
-                    x: event.clientX / $(document).width(),
-                    y: event.clientY / $(document).height()
-                }
             });
 
             heat.addEventListener('click', (e) => {
                 drawClick(e.detail.x, e.detail.y);
             });
 
-            // Pixi.js
+            window.addEventListener('resize', function () {
+                renderTextureSprite.width = app.renderer.width;
+                renderTextureSprite.height = app.renderer.height;
+
+                renderTexture.resize(app.renderer.width, app.renderer.height, true);
+            });
+
+            // DOM elements.
 
             mainDiv = document.getElementById('main');
 
@@ -112,10 +114,11 @@
             });
             document.getElementById('main').appendChild(app.view);
 
-            // Shader setup.
 
-            const fragmentShader = document.getElementById("fragment").innerHTML
-            const simpleShader = new PIXI.Filter(null, fragmentShader);
+
+            // Gradient texture setup.
+
+            const gradientTexture = PIXI.Texture.from("sprites/gradient.png");
 
             // Render texture setup.
 
@@ -126,33 +129,13 @@
             const renderTextureSprite = new PIXI.Sprite(renderTexture);
             app.stage.addChild(renderTextureSprite)
 
-            // Gradient texture setup.
+            // Shader setup.
 
-            const gradientTexture = PIXI.Texture.from("sprites/gradient.png");
+            const fragmentShader = document.getElementById("fragment").innerHTML
+            const simpleShader = new PIXI.Filter(null, fragmentShader);
 
             simpleShader.uniforms.gradient = gradientTexture;
             renderTextureSprite.filters = [simpleShader]
-
-
-            // Wait a frame before start updating, otherwise we still get the WebGL error
-            app.ticker.add(() => {
-
-                simpleShader.uniforms.mouse = mousePosition;
-
-                renderTexture.baseTexture.clearColor = [0, 0, 0, 1];
-                app.renderer.render(sprites, renderTexture, true);
-
-            });
-
-            //
-
-            $(window).resize(function () {
-                renderTextureSprite.width = app.renderer.width;
-                renderTextureSprite.height = app.renderer.height;
-
-                renderTexture.resize(app.renderer.width, app.renderer.height, true);
-            });
-
 
             // Particle container.
 
@@ -164,16 +147,7 @@
             });
             sprites.blendMode = PIXI.BLEND_MODES.SCREEN;
 
-            //
-
-            function clearSprites() {
-
-                for (let i = sprites.children.length - 1; i >= 0; i--) {
-                    let child = sprites.getChildAt(i);
-                    child.destroy();
-                }
-
-            }
+            // Draw click sprites.
 
             function drawClick(clickX, clickY) {
 
@@ -198,6 +172,8 @@
 
             app.ticker.add(function (delta) {
 
+                // Update sprites.
+
                 for (let i = sprites.children.length - 1; i >= 0; i--) {
                     let child = sprites.getChildAt(i);
 
@@ -212,13 +188,18 @@
 
                 };
 
+                // Render to texture.
+
+                renderTexture.baseTexture.clearColor = [0, 0, 0, 1];
+                app.renderer.render(sprites, renderTexture, true);
+
                 clock += delta;
             });
 
         })();
 
-
     </script>
+
 </body>
 
 </html>
