--- a/kissingbooth/index.html
+++ b/kissingbooth/index.html
@@ -1,13 +1,20 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kissing Booth</title>
     <style>
         body,
         html {
+            height: 100%;
+        }
+
+        body {
             background: #2b3990;
             background: linear-gradient(45deg, #2b3990 0%, #92278f 100%);
-            height: 100%;
             overflow: hidden;
         }
 
@@ -29,7 +36,6 @@
 
     <div id="main"></div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pixi.js/5.0.0-rc/pixi.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
 
@@ -37,27 +43,27 @@
 
     <script>
 
-        // Local clicks for testing.
-
-        $(document).click(function (event) {
-
-            const normalizedX = (event.clientX * 1.0 / $(document).width()).toPrecision(3);
-            const normalizedY = (event.clientY * 1.0 / $(document).height()).toPrecision(3);
-
-            drawClick(normalizedX, normalizedY);
-
-        });
-
-        heat.addEventListener('click', (e) => {
-            drawClick(e.detail.x, e.detail.y);
-        });
-
-        //
-
-        let app;
-        let sprites;
-
         (function () {
+
+            let app;
+            let sprites;
+
+            // Event handlers.
+
+            document.addEventListener("click", function (event) {
+
+                const normalizedX = (event.clientX * 1.0 / window.innerWidth).toPrecision(3);
+                const normalizedY = (event.clientY * 1.0 / window.innerHeight).toPrecision(3);
+
+                drawClick(normalizedX, normalizedY);
+
+            });
+
+            heat.addEventListener('click', (e) => {
+                drawClick(e.detail.x, e.detail.y);
+            });
+
+            // DOM elements.
 
             mainDiv = document.getElementById('main');
 
@@ -83,67 +89,61 @@
             sprites.blendMode = PIXI.BLEND_MODES.SCREEN;
             app.stage.addChild(sprites);
 
-        })();
+            var mySpriteSheetImage = PIXI.BaseTexture.from("sprites/kisses.png");
 
-        var mySpriteSheetImage = PIXI.BaseTexture.from("sprites/kisses.png");
+            let kisses = [
+                new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(0, 0, 128, 128)),
+                new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(128, 0, 128, 128)),
+                new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(0, 128, 128, 128)),
+                new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(128, 128, 128, 128))
+            ];
 
-        let kisses = [
-            new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(0, 0, 128, 128)),
-            new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(128, 0, 128, 128)),
-            new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(0, 128, 128, 128)),
-            new PIXI.Texture(mySpriteSheetImage, new PIXI.Rectangle(128, 128, 128, 128))
-        ];
+            // Draw clicks.
 
-        function clearSprites() {
+            function drawClick(clickX, clickY) {
 
-            for (let i = sprites.children.length - 1; i >= 0; i--) {
-                let child = sprites.getChildAt(i);
-                child.destroy();
+                const screenX = parseInt(clickX * mainDiv.clientWidth);
+                const screenY = parseInt(clickY * mainDiv.clientHeight);
+
+                const kissIndex = Math.floor(Math.random() * kisses.length);
+                const kiss = PIXI.Sprite.from(kisses[kissIndex]);
+
+                kiss.anchor.set(0.5);
+                kiss.x = screenX;
+                kiss.y = screenY;
+                kiss.rotation = (Math.random() * (Math.PI / 2.0)) - (Math.PI / 4.0);
+                kiss.tint = 0xc0c0c0 + (0x404040 * Math.random());
+
+                kiss.birth = Date.now();
+                kiss.death = kiss.birth + 1000;
+
+                sprites.addChild(kiss);
             }
 
-        }
+            // Render loop.
 
-        function drawClick(clickX, clickY) {
+            let clock = 0;
 
-            const screenX = parseInt(clickX * mainDiv.clientWidth);
-            const screenY = parseInt(clickY * mainDiv.clientHeight);
+            app.ticker.add(function (delta) {
 
-            const kissIndex = Math.floor(Math.random() * kisses.length);
-            const kiss = PIXI.Sprite.from(kisses[kissIndex]);
+                for (let i = sprites.children.length - 1; i >= 0; i--) {
+                    let kiss = sprites.getChildAt(i);
 
-            kiss.anchor.set(0.5);
-            kiss.x = screenX;
-            kiss.y = screenY;
-            kiss.rotation = (Math.random() * (Math.PI / 2.0)) - (Math.PI / 4.0);
-            kiss.tint = 0xc0c0c0 + (0x404040 * Math.random());
+                    let age = (Date.now() - kiss.birth) / (kiss.death - kiss.birth);
 
-            kiss.birth = Date.now();
-            kiss.death = kiss.birth + 1000;
-
-            sprites.addChild(kiss);
-        }
-
-        let clock = 0;
-
-        app.ticker.add(function (delta) {
-
-            for (let i = sprites.children.length - 1; i >= 0; i--) {
-                let kiss = sprites.getChildAt(i);
-
-                let age = (Date.now() - kiss.birth) / (kiss.death - kiss.birth);
-
-                if (age >= 1) {
-                    kiss.destroy();
-                } else {
-                    kiss.scale.set((1 - age));
-                }
+                    if (age >= 1) {
+                        kiss.destroy();
+                    } else {
+                        kiss.scale.set((1 - age));
+                    }
 
 
-            };
+                };
 
-            clock += delta;
-        });
+                clock += delta;
+            });
 
+        })();
 
     </script>
 
