--- a/kissingbooth/index.html
+++ b/kissingbooth/index.html
@@ -26,8 +26,8 @@
             bottom: 0;
             user-select: none;
 
-            background: url('textures/background.svg') no-repeat center bottom fixed;
-            background-size: cover;
+            /* background: url('textures/background.svg') no-repeat center bottom fixed;
+            background-size: cover; */
         }
     </style>
 </head>
