Added map maker demo.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="row justify-content-center align-items-center text-center">
                     <div id="demos" class="btn-group" role="group" aria-label="Basic example">
                         <a class="btn btn-outline-light" href="/heatmap/">Heat</a>
-                        <!-- <a class="btn btn-outline-light" href="/orbs/">Orbs</a> -->
+                        <a class="btn btn-outline-light" href="/markers/">Markers</a>
                         <a class="btn btn-outline-light" href="/kissingbooth/">Kiss</a>
                         <a class="btn btn-outline-light" href="/sequence/">Sequence</a>
                         <a class="btn btn-outline-light" href="/baby/">Baby</a>
